--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Camões, Luís de, 1524?-1580 -- Poetry'
 - !lcc 'PQ'
+- GITenberg
 title: "Camões e o amor\r\nno aniversario 304 da morte do poeta"
 url: http://www.gutenberg.org/ebooks/22772
